--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LocationsList.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LocationsList.razor
@@ -1,4 +1,3 @@
-@page "/locations"
 @using RapidGuestRegistration.Client.Model
 @using RapidGuestRegistration.Client.Api
 @inject IDefaultApi Api
@@ -22,12 +21,11 @@
 
     protected override void OnInitialized()
     {
-        _locations = Api.LocationGet();
+        _locations = Api.LocationGet() ?? new List<Location>();
     }
 
     private void UpdateLocations()
     {
-        _locations = Api.LocationGet();
+        _locations = Api.LocationGet() ?? new List<Location>();
     }
-
 }
