--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
@@ -1,6 +1,7 @@
 ﻿@using RapidGuestRegistration.Client.Model
 @using RapidGuestRegistration.Client.Api
 @inject IDefaultApi Api
+@inject NavigationManager NavigationManager 
 
 <div class="row">
 
@@ -10,7 +11,7 @@
                 <h4>
                     @Table.Name
                 </h4>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" @onclick="EditTable">
                     Edit
                 </button>
                 <button class="btn btn-outline-danger" @onclick="DeleteTable">
@@ -27,16 +28,21 @@
 @code {
     [Parameter]
     public Table Table { get; set; }
-    
+
     [Parameter]
     public long LocationId { get; set; }
-    
+
     [Parameter]
     public EventCallback OnTablesChanged { get; set; }
 
-    private async void DeleteTable()
+    private async Task DeleteTable()
     {
         Api.LocationLocationIdTableTableIdDelete(LocationId, Table.Id);
         await OnTablesChanged.InvokeAsync(this);
+    }
+
+    private async Task EditTable()
+    {
+        NavigationManager.NavigateTo($"/location/{LocationId}/table/{Table.Id}/edit");
     }
 }
