--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/QrCode.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/QrCode.razor
@@ -2,13 +2,17 @@
 @using System.IO
 @using System.Drawing.Imaging
 
-<img src="data:image/png;base64, @_image" alt="QR code leading to @Text"/>
+<img class="img-fluid rounded" src="data:image/png;base64, @_image" alt="QR code leading to @Text" />
 
 @code {
     [Parameter] 
     public string Text { get; set; }
-    
+
+    [Parameter]
+    public string Size { get; set; }
+
     private string _image;
+    
     
     protected override void OnInitialized()
     {
