--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
@@ -1,22 +1,36 @@
 ﻿@using RapidGuestRegistration.Client.Model
 @using RapidGuestRegistration.Client.Api
 @inject IDefaultApi Api
-@inject NavigationManager NavigationManager 
+@inject NavigationManager NavigationManager
 
 <div class="row">
 
-    <div class="col-12">
-        <div class="card">
-            <div class="card-header">
-                <h4>
-                    @Table.Name
-                </h4>
-                <button class="btn btn-primary" @onclick="EditTable">
-                    Edit
-                </button>
-                <button class="btn btn-outline-danger" @onclick="DeleteTable">
-                    Delete
-                </button>
+    <div class="col-8">
+        <div class="card mb-1">
+            <div class="card-body bg-light">
+
+                <div class="row">
+                    <div class="d-flex mr-1 col-3">
+                        <h4 class="d-block align-self-center mb-0 pb-0 ml-1">
+                            @Table.Name
+                        </h4>
+                    </div>
+                    <div class="d-flex mr-1">
+                        <button class="btn btn-primary align-self-center" @onclick="EditTable">
+                            Edit
+                        </button>
+                    </div>
+                    <div class="d-flex">
+                        <button class="btn btn-outline-danger align-self-center" @onclick="DeleteTable">
+                            Delete
+                        </button>
+                    </div>
+                    <div class="col-sm-1 d-flex justify-content-center">
+                        <TableQrCode LocationId="@LocationId" TableId="@Table.Id"></TableQrCode>
+                    </div>
+                </div>
+
+
             </div>
 
         </div>
@@ -26,6 +40,7 @@
 </div>
 
 @code {
+
     [Parameter]
     public Table Table { get; set; }
 
@@ -45,4 +60,5 @@
     {
         NavigationManager.NavigateTo($"/location/{LocationId}/table/{Table.Id}/edit");
     }
+
 }
