--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/RegistrationForm.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/RegistrationForm.razor
@@ -1,10 +1,62 @@
 @page "/locations/{LocationId}/table/{TableId}/register"
+@using RapidGuestRegistration.Ui.Data
+@using RapidGuestRegistration.Client.Api
+
+@inject IDefaultApi Api
+@inject NavigationManager NavigationManager
+
+
 <h3>RegistrationForm</h3>
 
+
+<EditForm Model="@editmodel" OnValidSubmit="@HandleValidSubmit">
+    <DataAnnotationsValidator />
+    <ValidationSummary />
+
+    <label>
+        Registration:
+    </label>
+    <p>
+        <label>
+        <p>Name:</p>
+        <InputText @bind-Value="editmodel.Name" />
+        </label>
+    </p>
+    <p>
+        <label>
+            <p>Phone Number:</p>
+            <InputText @bind-Value="editmodel.Phonenumber" />
+        </label>
+    </p>
+    <p>
+        <label>
+            <p>Email:</p>
+            <InputText @bind-Value="editmodel.Email" />
+        </label>
+    </p>
+
+
+    <button class="btn btn-primary" type="submit">Save</button>
+</EditForm>
+
 @code {
+
     [Parameter]
     public string LocationId { get; set; }
-    
     [Parameter]
     public string TableId { get; set; }
+
+    private GuestEditModel editmodel;
+
+
+    protected override void OnInitialized()
+    {
+
+        editmodel = new GuestEditModel();
+    }
+
+    private void HandleValidSubmit()
+    {
+
+    }
 }
