cleanup. restrict access to admin views for non logged in user.

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditTable.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditTable.razor
@@ -1,4 +1,6 @@
 ﻿@page "/location/{LocationId}/table/{TableId}/edit"
+@attribute [Authorize]
+
 <h3>EditTable</h3>
 
 <TableEditForm TableId="long.Parse(TableId)" LocationId="long.Parse(LocationId)"></TableEditForm>
