--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditLocation.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditLocation.razor
@@ -1,4 +1,6 @@
 @page "/location/{LocationId}/edit"
+@attribute [Authorize]
+
 <h3>Edit Location</h3>
 <LocationEditForm LocationId="long.Parse(LocationId)"></LocationEditForm>
 <TableList LocationId="long.Parse(LocationId)"></TableList>
