--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/Index.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/Index.razor
@@ -1,4 +1,9 @@
 ﻿@page "/"
-
-<h1>Dashboard</h1>
-<LocationsList></LocationsList>
+<AuthorizeView>
+    <Authorized>
+        <Dashboard></Dashboard>
+    </Authorized>
+    <NotAuthorized>
+        <LoginDisplay></LoginDisplay>
+    </NotAuthorized>
+</AuthorizeView>
