--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableList.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableList.razor
@@ -42,17 +42,17 @@
 
     protected override void OnInitialized()
     {
-        _tables = Api.LocationLocationIdTableGet(LocationId)??new List<Table>();
+        _tables = Api.GetTablesAtLocation(LocationId)??new List<Table>();
     }
 
     private void UpdateTables()
     {
-        _tables = Api.LocationLocationIdTableGet(LocationId) ?? new List<Table>();
+        _tables = Api.GetTablesAtLocation(LocationId) ?? new List<Table>();
     }
 
     private async void AddTable()
     {
-        Api.LocationLocationIdTablePost(LocationId, new Table { Name = _tableName });
+        Api.AddTableAtLocation(LocationId, new Table { Name = _tableName });
         UpdateTables();
     }
 
