update table insert.

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/RegistrationForm.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/RegistrationForm.razor
@@ -95,6 +95,7 @@
         }
         catch (ApiException ae)
         {
+            Console.WriteLine(ae.ToString());
             ApiErrorOccured = true;
         }
     }
