--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
@@ -16,12 +16,12 @@
                         </h4>
                     </div>
                     <div class="d-flex mr-1">
-                        <button class="btn btn-primary align-self-center" @onclick="EditTable">
+                        <button id="edittablebtn" class="btn btn-primary align-self-center" @onclick="EditTable">
                             Edit
                         </button>
                     </div>
                     <div class="d-flex">
-                        <button class="btn btn-outline-danger align-self-center" @onclick="DeleteTable">
+                        <button id="deletetablebtn" class="btn btn-outline-danger align-self-center" @onclick="DeleteTable">
                             Delete
                         </button>
                     </div>
