--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableEditForm.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableEditForm.razor
@@ -12,7 +12,7 @@
         <DataAnnotationsValidator />
         <ValidationSummary />
 
-        <InputText id="name" @bind-Value="_table.Name" />
+        <InputText id="edittablename" @bind-Value="_table.Name" />
 
          
     </EditForm>
