--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableList.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableList.razor
@@ -18,8 +18,8 @@
          <div class="col-12">
              <div class="card">
                  <div class="card-header">
-                     <input placeholder="Table Name" @bind="@_tableName"/>
-                     <button class="btn btn-primary" @onclick="AddTable">
+                     <input id="tablename" placeholder="Table Name" @bind="@_tableName"/>
+                     <button id="addtablebtn" class="btn btn-primary" @onclick="AddTable">
                          Add
                      </button>
                  </div>
