--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LocationCreate.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LocationCreate.razor
@@ -6,8 +6,8 @@
     <div class="card mb-1">
         <div class="card-header">
             <div class="input-group h-100">
-                <input id="name" class="mr-1" placeholder="Location Name" @bind="@_location.Name"/>
-                <button class="btn btn-primary mr-1 float-right" @onclick="AddLocation">Add</button>
+                <input id="locationname" class="mr-1" placeholder="Location Name" @bind="@_location.Name"/>
+                <button id="addlocationbutton" class="btn btn-primary mr-1 float-right" @onclick="AddLocation">Add</button>
             </div>
         </div>
     </div>
