--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LocationDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LocationDisplay.razor
@@ -8,8 +8,8 @@
             <div class="input-group h-100">
                 <!-- <input id="name" class="mr-1" value="@Location.Name"/> -->
                 <h4 class="align-middle mr-1">@Location.Name</h4>
-                <button class="btn btn-primary mr-1 float-right" @onclick="NavigateToEdit">Edit</button>
-                <button class="btn btn-outline-danger mr-1 float-right" @onclick="DeleteLocation">Delete</button>
+                <button id="editlocationbtn" class="btn btn-primary mr-1 float-right" @onclick="NavigateToEdit">Edit</button>
+                <button id="deletelocationbtn" class="btn btn-outline-danger mr-1 float-right" @onclick="DeleteLocation">Delete</button>
             </div>
 
         </div>
