--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/QrCode.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/QrCode.razor
@@ -2,7 +2,7 @@
 @using System.IO
 @using System.Drawing.Imaging
 
-<img class="img-fluid rounded" src="data:image/png;base64, @_image" alt="QR code leading to @Text" />
+<img id="qrfield" class="img-fluid rounded" src="data:image/png;base64, @_image" alt="QR code leading to @Text" />
 
 @code {
     [Parameter] 
