--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditLocation.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditLocation.razor
@@ -2,6 +2,10 @@
 <h3>Edit Location</h3>
 <LocationEditForm LocationId="long.Parse(LocationId)"></LocationEditForm>
 <TableList LocationId="long.Parse(LocationId)"></TableList>
+
+<div class="footer">
+    <p>Advanced Software Engineering Project</p>
+</div>
 @code {
     [Parameter]
     public string LocationId { get; set; }
