--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditTable.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/EditTable.razor
@@ -3,6 +3,9 @@
 
 <TableEditForm TableId="long.Parse(TableId)" LocationId="long.Parse(LocationId)"></TableEditForm>
 
+<div class="footer">
+    <p>Advanced Software Engineering Project</p>
+</div>
 
 @code {
     [Parameter]
