--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/Index.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/Index.razor
@@ -1,4 +1,14 @@
 ﻿@page "/"
 
+
+
 <h1>Dashboard</h1>
+
 <LocationsList></LocationsList>
+
+
+
+<div class="footer">
+    <p>Advanced Software Engineering Project</p>
+</div>
+
