--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/_Host.cshtml
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/_Host.cshtml
@@ -14,6 +14,9 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet" />
+    <link href="https://cdn.syncfusion.com/blazor/18.4.42/styles/bootstrap4.css" rel="stylesheet" />
+    <script src="https://cdn.syncfusion.com/blazor/18.4.42/syncfusion-blazor.min.js"></script>
 </head>
 <body>
     <app>
