--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<div class="top-row pl-4 navbar navbar-dark">
+﻿@using RapidGuestRegistration.Ui 
+
+<div class="top-row pl-4 navbar navbar-dark">
     <a class="navbar-brand" href="">RapidGuestRegistration.Ui</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
@@ -16,6 +18,12 @@
             <NavLink class="nav-link" href="locations">
                 <span class="oi oi-location" aria-hidden="true"></span> Locations
             </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="heatmap">
+                <span class="oi oi-map-marker" aria-hidden="true"></span> HeatMap
+            </NavLink>
+           
         </li>
     </ul>
 </div>
