--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/wwwroot/css/site.css
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/wwwroot/css/site.css
@@ -97,6 +97,14 @@ app {
                 color: white;
             }
 
+.footer {
+    background-color: #1b6ec2;
+    color: #ffffff;
+    text-align: center;
+    font-size: 20px;
+    padding: 15px;
+}
+
 .content {
     padding-top: 1.1rem;
 }
