--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/_Imports.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/_Imports.razor
@@ -7,3 +7,5 @@
 @using Microsoft.JSInterop
 @using RapidGuestRegistration.Ui
 @using RapidGuestRegistration.Ui.Shared
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.HeatMap
