--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-location" aria-hidden="true"></span> Locations
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="heatmap">
+                <span class="oi oi-map-marker" aria-hidden="true"></span> HeatMap
+            </NavLink>
+        </li>
     </ul>
 </div>
 
