--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/HeatMap.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/HeatMap.razor
@@ -1,32 +1,19 @@
 ﻿@page "/heatmap"
-
 @using Syncfusion.Blazor.HeatMap
+@using RapidGuestRegistration.Client.Api
+@using RapidGuestRegistration.Client.Model
+@inject IDefaultApi Api
 
-<h3>HeatMap</h3>
+@foreach (var location in locations)
+{
+    <HeatMapKomponent currentLocation="location"></HeatMapKomponent>
+}
 
-
-
-<SfHeatMap DataSource="@HeatMapData">
-    <HeatMapTitle Text="Sales Revenue per Employee (in 1000 US$)"></HeatMapTitle>
-    <HeatMapCellSettings ShowLabel="true" TileType="CellType.Rect"></HeatMapCellSettings>
-</SfHeatMap>
-
-@code{
-    int[,] GetDefaultData()
-    {
-        int[,] dataSource = new int[,]
-        {
-            {1, 2, 3, 4, 5},
-            {6, 7, 8, 9, 10},
-            {11, 12, 13, 14, 15},
-            {16, 17, 18, 19, 20},
-            {21, 22, 23, 24, 25}
-        };
-        return dataSource;
-    }
-    public object HeatMapData { get; set; }
+@code
+{
+    List<Location> locations;
     protected override void OnInitialized()
     {
-        HeatMapData = GetDefaultData();
+        locations = Api.GetLocations();
     }
 }
