--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/HeatMapKomponent.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/HeatMapKomponent.razor
@@ -19,18 +19,12 @@
     [Parameter]
     public Location currentLocation { get; set; }
     List<int> activities = new List<int>();
-    List<int> GetDefaultData()
+    int[,] GetDefaultData()
     {
 
-        //int[,] dataSource = new int[,]
-        //{
-        //    {1, 2, 3, 4, 5},
-        //    {6, 7, 8, 9, 10},
-        //    {11, 12, 13, 14, 15},
-        //    {16, 17, 18, 19, 20},
-        //    {21, 22, 23, 24, 25}
-        //};
-        return activities;
+        int[,] datasource = { 1, 2, 3 }
+
+        return datasource;
     }
     public object HeatMapData { get; set; }
     protected override void OnInitialized()
