--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/HeatMap.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Pages/HeatMap.razor
@@ -6,7 +6,7 @@
 
 @foreach (var location in locations)
 {
-    <HeatMapKomponent currentLocation="location"></HeatMapKomponent>
+    <HeatMapKomponent CurrentLocation="location"></HeatMapKomponent>
 }
 
 @code
