--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/TableDisplay.razor
@@ -20,6 +20,11 @@
                             Edit
                         </button>
                     </div>
+                    <div class="d-flex mr-1">
+                        <button class="btn btn-primary align-self-center" @onclick="PrintTable">
+                            Print
+                        </button>
+                    </div>
                     <div class="d-flex">
                         <button class="btn btn-outline-danger align-self-center" @onclick="DeleteTable">
                             Delete
@@ -61,4 +66,8 @@
         NavigationManager.NavigateTo($"/location/{LocationId}/table/{Table.Id}/edit");
     }
 
+    private async Task PrintTable()
+    {
+        NavigationManager.NavigateTo($"/location/{LocationId}/table/{Table.Id}/print");
+    }
 }
