Slider for Heatmap

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/HeatMapKomponent.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/HeatMapKomponent.razor
@@ -1,10 +1,17 @@
 ﻿
 @using Syncfusion.Blazor.HeatMap
+@using Syncfusion.Blazor.Inputs
 @using RapidGuestRegistration.Client.Api
 @using RapidGuestRegistration.Client.Model
 @inject IDefaultApi Api
 
 <h3>HeatMap</h3>
+
+<SfSlider Width="800px" Step="7" Type="SliderType.MinRange" Max="70" @bind-Value="@DaysValue">
+    <SliderTooltipData IsVisible="true" ShowOn="TooltipShowOn.Always" Placement="TooltipPlacement.After"></SliderTooltipData>
+    <SliderLimits Enabled="true" MinStart="0" MinEnd="70" ></SliderLimits>
+    <SliderTicksData Placement="Placement.After" LargeStep="7" SmallStep="7"></SliderTicksData>
+</SfSlider>
 
 <SfHeatMap DataSource="@HeatMapData">
     <HeatMapTitle Text="Visitors by Table"></HeatMapTitle>
@@ -14,6 +21,7 @@
 @code{
     [Parameter]
     public Location CurrentLocation { get; set; }
+    int DaysValue { get; set; }
 
     int[,] GetDefaultData()
     {
@@ -21,7 +29,7 @@
         var tables = Api.GetTablesAtLocation(CurrentLocation.Id);
         foreach (var t in tables)
         {
-            var activity = (int)Api.GetTableActivity(CurrentLocation.Id, t.Id, DateTime.Now.Subtract(TimeSpan.FromDays(30)), DateTime.Now).Activity;
+            var activity = (int)Api.GetTableActivity(CurrentLocation.Id, t.Id, DateTime.Now.Subtract(TimeSpan.FromDays(DaysValue)), DateTime.Now).Activity;
             activities.Add(activity);
         }
 
@@ -35,16 +43,16 @@
         }
 
         return datasource;
-    //    int[,] dataSource = new int[,]
-    //{
-    //        {73, 39, 26, 39, 94, 0},
-    //        {93, 58, 53, 38, 26, 68},
-    //        {99, 28, 22, 4, 66, 90},
-    //        {14, 26, 97, 69, 69, 3},
-    //        {7, 46, 47, 47, 88, 6},
-    //        {41, 55, 73, 23, 3, 79}
-    //};
-    //    return dataSource;
+        //    int[,] dataSource = new int[,]
+        //{
+        //        {73, 39, 26, 39, 94, 0},
+        //        {93, 58, 53, 38, 26, 68},
+        //        {99, 28, 22, 4, 66, 90},
+        //        {14, 26, 97, 69, 69, 3},
+        //        {7, 46, 47, 47, 88, 6},
+        //        {41, 55, 73, 23, 3, 79}
+        //};
+        //    return dataSource;
     }
 
     public object HeatMapData { get; set; }
