--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LoginDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LoginDisplay.razor
@@ -2,7 +2,7 @@
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
         <form method="post" action="Identity/Account/LogOut">
-            <button type="submit" class="nav-link btn btn-link">Log out</button>
+            <button id="logout_btn" type="submit" class="nav-link btn btn-link">Log out</button>
         </form>
     </Authorized>
     <NotAuthorized>
