Nur noch defaultuser

--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LoginDisplay.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/LoginDisplay.razor
@@ -1,4 +1,5 @@
-﻿<AuthorizeView>
+﻿
+<AuthorizeView>
     <Authorized>
         <a href="Identity/Account/Manage">Hello, @context.User.Identity.Name!</a>
         <form method="post" action="Identity/Account/LogOut">
@@ -6,7 +7,8 @@
         </form>
     </Authorized>
     <NotAuthorized>
-        <a href="Identity/Account/Register">Register</a>
+        <!--<a href="Identity/Account/Register">Register</a>-->
         <a href="Identity/Account/Login">Log in</a>
     </NotAuthorized>
 </AuthorizeView>
+
