--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/HeatMapComponent.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/HeatMapComponent.razor
@@ -1,11 +1,10 @@
-﻿
-@using Syncfusion.Blazor.HeatMap
+﻿@using Syncfusion.Blazor.HeatMap
 @using Syncfusion.Blazor.Inputs
 @using RapidGuestRegistration.Client.Api
 @using RapidGuestRegistration.Client.Model
 @inject IDefaultApi Api
 
-<h3>HeatMap</h3>
+<h3>@CurrentLocation.Name</h3>
 
 <SfSlider Width="800px" Step="7" Type="SliderType.MinRange" Max="70" @bind-Value="@DaysValue">
     <SliderTooltipData IsVisible="true" ShowOn="TooltipShowOn.Always" Placement="TooltipPlacement.After"></SliderTooltipData>
@@ -21,6 +20,7 @@
 @code{
     [Parameter]
     public Location CurrentLocation { get; set; }
+
     int DaysValue { get; set; }
 
     int[,] GetDefaultData()
@@ -43,16 +43,6 @@
         }
 
         return datasource;
-        //    int[,] dataSource = new int[,]
-        //{
-        //        {73, 39, 26, 39, 94, 0},
-        //        {93, 58, 53, 38, 26, 68},
-        //        {99, 28, 22, 4, 66, 90},
-        //        {14, 26, 97, 69, 69, 3},
-        //        {7, 46, 47, 47, 88, 6},
-        //        {41, 55, 73, 23, 3, 79}
-        //};
-        //    return dataSource;
     }
 
     public object HeatMapData { get; set; }
