--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
@@ -24,7 +24,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="report">
-                <span class="oi oi-map-marker" aria-hidden="true"></span> Report
+                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Report
             </NavLink>
         </li>
     </ul>
