--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
@@ -18,6 +18,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="bookings">
+                <span class="oi oi-book" aria-hidden="true"></span> Booking
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="heatmap">
                 <span class="oi oi-map-marker" aria-hidden="true"></span> HeatMap
             </NavLink>
