--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
@@ -6,28 +6,33 @@
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="locations">
-                <span class="oi oi-location" aria-hidden="true"></span> Locations
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="heatmap">
-                <span class="oi oi-map-marker" aria-hidden="true"></span> HeatMap
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="report">
-                <span class="oi oi-spreadsheet" aria-hidden="true"></span> Report
-            </NavLink>
-        </li>
-    </ul>
+	<ul class="nav flex-column">
+		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+				<span class="oi oi-dashboard" aria-hidden="true"></span> Dashboard
+			</NavLink>
+		</li>
+		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="locations">
+				<span class="oi oi-location" aria-hidden="true"></span> Locations
+			</NavLink>
+		</li>
+		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="users">
+				<span class="oi oi-people" aria-hidden="true"></span> Users
+			</NavLink>
+		</li>
+		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="heatmap">
+				<span class="oi oi-map-marker" aria-hidden="true"></span> HeatMap
+			</NavLink>
+		</li>
+		<li class="nav-item px-3">
+			<NavLink class="nav-link" href="report">
+				<span class="oi oi-spreadsheet" aria-hidden="true"></span> Report
+			</NavLink>
+		</li>
+	</ul>
 </div>
 
 @code {
