--- a/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
+++ b/RapidGuestRegistration/RapidGuestRegistration.Ui/Shared/NavMenu.razor
@@ -19,7 +19,7 @@
 		</li>
 		<li class="nav-item px-3">
 			<NavLink class="nav-link" href="users">
-				<span class="oi oi-people" aria-hidden="true"></span> Users
+				<span class="oi oi-people" aria-hidden="true"></span> Userrolls
 			</NavLink>
 		</li>
 		<li class="nav-item px-3">
